@@ -117,4 +117,16 @@
           />
     </genericsetup:upgradeSteps>
 
+    <genericsetup:upgradeSteps
+      source="1110"
+      destination="1111"
+      sortkey="10"
+      profile="vnccollab.theme:default">
+
+        <genericsetup:upgradeDepends
+          title="Adds Anonymous Homepage Setup"
+          import_steps="componentregistry controlpanel"
+          />
+    </genericsetup:upgradeSteps>
+
 </configure>
