@@ -4,6 +4,9 @@ Changelog
 1.7.4 - unreleased
 ------------------
 
+- Adds Site Setup add-on configuration for Anonymous Homepage [8578].
+  [Jose Dinuncio]
+
 - Disable zimbra-mail-portlet-view from theme. Fixes History.txt.
   [Cesar Gonzalez]
 
